# yzel

./: .gitignore  CLAUDE.md  LICENSE  MASTERPLAN.md  NEXT.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
.github/: FUNDING.yml
docs/: ARCHITECTURE.md  TROUBLESHOOTING-1C.md
docs/_context/: BRIEF.md
src/yzel/: __init__.py  cli.py
src/yzel/connectors/: __init__.py
src/yzel/connectors/amocrm/: __init__.py  client.py  server.py
src/yzel/connectors/bitrix24/: __init__.py  client.py  server.py
src/yzel/connectors/iiko/: __init__.py  client.py  server.py
src/yzel/connectors/moysklad/: __init__.py  client.py  server.py
src/yzel/connectors/onec/: __init__.py  odata.py  server.py
src/yzel/connectors/ozon/: __init__.py  client.py  server.py
src/yzel/connectors/telegram/: __init__.py  client.py  server.py
src/yzel/connectors/wildberries/: __init__.py  client.py  server.py
src/yzel/core/: __init__.py  discovery.py  types.py  vault.py
src/yzel/enterprise/: __init__.py
tests/: conftest.py  mock_amocrm_server.py  mock_bitrix24_server.py  mock_iiko_server.py  mock_moysklad_server.py  mock_odata_server.py  mock_ozon_server.py  mock_telegram_server.py  mock_wildberries_server.py  test_amocrm.py  test_bitrix24.py  test_discovery.py  test_iiko.py  test_moysklad.py  test_onec.py  test_ozon.py  test_telegram.py  test_vault.py  test_wildberries.py
