[project]
name = "yzel"
version = "0.1.0"
description = "Unified MCP connectors for CIS business tools — 1C, Bitrix24, AmoCRM, Moysklad"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ayal Nogovitsyn", email = "hello@ayal.tech" },
]
keywords = ["mcp", "1c", "bitrix24", "amocrm", "moysklad", "ai", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
yzel = "yzel.cli:main"

[project.urls]
Homepage = "https://github.com/Aiyo28/yzel"
Documentation = "https://github.com/Aiyo28/yzel#readme"
Repository = "https://github.com/Aiyo28/yzel"
Issues = "https://github.com/Aiyo28/yzel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yzel"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
